# tap-plugin-hash

./: Cargo.toml
src/: lib.rs
