[package]
name = "tap-plugin-hash"
version = "0.1.0"
authors = ["Solal Jacob"]
edition = "2021"

[dependencies]
tap = { version="0.1.0", git="https://github.com/tap-ir/tap.git" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
schemars = "0.8"
sha-1 = "0.8"
log = { version = "0.4", features = ["std", "serde"] }
anyhow = { version = "1.0.40"}
